--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,7 @@
 	RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} -f [OR]
     RewriteCond %{REQUEST_FILENAME} -d
-
-
+    RewriteRule ^api/(.*)$ route-api.php?resource=$1 [QSA,L,END]
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
     RewriteRule ^(.*)$ router.php?action=$1 [QSA,L]
     
